cmake_minimum_required(VERSION 3.19)
project(C_Learn C)

set(CMAKE_C_STANDARD 11)

add_executable(3.1main 3.1_main.c)
add_executable(3.2main 3.2_main.c)
add_executable(20 20.c)
add_executable(OJ-2-3 OJ-2-3.c)
add_executable(OJ-2-4 OJ-2-4.c)
add_executable(OJ-2-5 OJ-2-5.c)
add_executable(demo demo.c)
add_executable(OJ-2-6 OJ-2-6.c)
add_executable(OJ-2-7 OJ-2-7.c)
add_executable(OJ-2-8 OJ-2-8.c)
add_executable(OJ-2-9 OJ-2-9.c)
add_executable(OJ-2-10 OJ-2-10.c)
add_executable(OJ-2-11 OJ-2-11.c)
add_executable(OJ-2-12 OJ-2-12.c)
add_executable(OJ-2-1 OJ-2-1.c)
add_executable(OJ-2-2 OJ-2-2.c)
add_executable(OJ-3-1 OJ-3-1.c)
add_executable(OJ-3-2 OJ-3-2.c)
add_executable(OJ-3-3 OJ-3-3.c)
add_executable(OJ-3-4 OJ-3-4.c)
add_executable(OJ-3-5 OJ-3-5.c)
add_executable(OJ-3-6 OJ-3-6.c)
add_executable(OJ-3-7 OJ-3-7.c)
add_executable(OJ-3-8 OJ-3-8.c)
add_executable(OJ-3-9 OJ-3-9.c)
add_executable(OJ-3-10 OJ-3-10.c)
add_executable(OJ-4-1 OJ-4-1.c)
add_executable(OJ-4-2 OJ-4-2.c)
add_executable(OJ-4-3 OJ-4-3.c)
add_executable(OJ-4-4 OJ-4-4.c)
add_executable(OJ-4-5 OJ-4-5.c)
add_executable(OJ-4-6 OJ-4-6.c)
add_executable(OJ-4-7 OJ-4-7.c)
add_executable(OJ-4-8 OJ-4-8.c)
add_executable(OJ-4-9 OJ-4-9.c)
add_executable(OJ-4-10 OJ-4-10.c)