cmake_minimum_required(VERSION 3.19)
project(C_Learn C)

set(CMAKE_C_STANDARD 11)
project(demo LANGUAGES C CXX) #CMake Error: Cannot determine link language for target 如果这里不添加C 的话会报这个错误

add_executable(demo C-Test/demo.c)
add_executable(OJ-2-1 C-Chap-2/OJ-2-1.c)
add_executable(OJ-2-2 C-Chap-2/OJ-2-2.c)
add_executable(OJ-2-3 C-Chap-2/OJ-2-3.c)
add_executable(OJ-2-4 C-Chap-2/OJ-2-4.c)
add_executable(OJ-2-5 C-Chap-2/OJ-2-5.c)
add_executable(OJ-2-6 C-Chap-2/OJ-2-6.c)
add_executable(OJ-2-7 C-Chap-2/OJ-2-7.c)
add_executable(OJ-2-8 C-Chap-2/OJ-2-8.c)
add_executable(OJ-2-9 C-Chap-2/OJ-2-9.c)
add_executable(OJ-2-10 C-Chap-2/OJ-2-10.c)
add_executable(OJ-2-11 C-Chap-2/OJ-2-11.c)
add_executable(OJ-2-12 C-Chap-2/OJ-2-12.c)
add_executable(OJ-3-1 C-Chap-3/OJ-3-1.c)
add_executable(OJ-3-2 C-Chap-3/OJ-3-2.c)
add_executable(OJ-3-3 C-Chap-3/OJ-3-3.c)
add_executable(OJ-3-4 C-Chap-3/OJ-3-4.c)
add_executable(OJ-3-5 C-Chap-3/OJ-3-5.c)
add_executable(OJ-3-6 C-Chap-3/OJ-3-6.c)
add_executable(OJ-3-7 C-Chap-3/OJ-3-7.c)
add_executable(OJ-3-8 C-Chap-3/OJ-3-8.c)
add_executable(OJ-3-9 C-Chap-3/OJ-3-9.c)
add_executable(OJ-3-10 C-Chap-3/OJ-3-10.c)
add_executable(OJ-4-1 C-Chap-4/OJ-4-1.c)
add_executable(OJ-4-2 C-Chap-4/OJ-4-2.c)
add_executable(OJ-4-3 C-Chap-4/OJ-4-3.c)
add_executable(OJ-4-4 C-Chap-4/OJ-4-4.c)
add_executable(OJ-4-5 C-Chap-4/OJ-4-5.c)
add_executable(OJ-4-6 C-Chap-4/OJ-4-6.c)
add_executable(OJ-4-7 C-Chap-4/OJ-4-7.c)
add_executable(OJ-4-8 C-Chap-4/OJ-4-8.c)
add_executable(OJ-4-9 C-Chap-4/OJ-4-9.c)
add_executable(OJ-4-10 C-Chap-4/OJ-4-10.c)
add_executable(OJ-5-5 C-Chap-5/OJ-5-5.c)
add_executable(OJ-5-4 C-Chap-5/OJ-5-4.c)
add_executable(OJ-5-6 C-Chap-5/OJ-5-6.c)
add_executable(OJ-5-1 C-Chap-5/OJ-5-1.c)
add_executable(OJ-5-2 C-Chap-5/OJ-5-2.c)
add_executable(OJ-5-3 C-Chap-5/OJ-5-3.c)
add_executable(OJ-5-7 C-Chap-5/OJ-5-7.c)
add_executable(cpp-HomeWork-9 "cpp-Homework-9/cpp-HomeWork-9(1).cpp")
add_executable(C-Mid-1 C-Mid-1/Midterm-1.c)
add_executable(Midterm-2 C-Mid-1/Midterm-2.c)
add_executable(Midterm-4 C-Mid-1/Midterm-4.c)
add_executable(Midterm-3 C-Mid-1/Midterm-3.c)
add_executable(demo-cpp C-Test/demo-cpp.cpp)
add_executable(cpp-HomeWork-3-2 "cpp-Homework-3/cpp-Homework-3-2.cpp")
add_executable(OJ-6-1 C-Chap-6/OJ-6-1.c)
add_executable(OJ-6-2 C-Chap-6/OJ-6-2.c)
add_executable(OJ-6-3 C-Chap-6/OJ-6-3.c)
add_executable(OJ-6-4 C-Chap-6/OJ-6-4.c)
add_executable(OJ-6-5 C-Chap-6/OJ-6-5.c)
add_executable(OJ-6-6 C-Chap-6/OJ-6-6.c)
add_executable(cpp-HomeWork-10 "cpp-Homework-10/cpp-Homework-10.cpp")
add_executable(cpp-HomeWork-3-3 "cpp-Homework-3/cpp-Homework-3-3.cpp")
add_executable(OJ-6-7 C-Chap-6/OJ-6-7.c)
add_executable(OJ-6-8 C-Chap-6/OJ-6-8.c)
add_executable(Midterm2-4 C-Mid-2/Midterm-4.c)



